chore(supabase): fix supabase-realtime (#855)
These changes makes `supabase-realtime` functional both on the admin dashboard and for external connections:
* Adds missing mandatory environment variables
* Adds route for supabase realtime's API in addition to the one that exists for websocket connections
* Runs built in supabase realtime db seed command on pod startup to setup tenant
* Updates all variables to use the name `supabase-realtime` as the db entries, routes, and envs all need to use the exact same name
* Bumps the Supabase version to bring in the latest (significant) realtime refactor and pull in the newly functioning realtime migrations
* Creates `_realtime` schema on realtime pod start to segment realtime tables from the rest of the db
* Sets db `wal_level` to `logical` as supabase realtime uses the data produced by the WAL and requires a minimum `wal_level` of `logical` to get the data required for RLS to function

--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -75,6 +75,22 @@ realtime:
   resourcesPreset: "none"
   podLabels:
     sidecar.istio.io/inject: "false"
+  extraEnvVars:
+    - name: APP_NAME
+      value: "supabase-realtime"
+    - name: DB_AFTER_CONNECT_QUERY
+      value: "DO $body$ BEGIN CREATE SCHEMA IF NOT EXISTS _realtime; ALTER SCHEMA _realtime OWNER TO postgres; SET search_path TO _realtime; END $body$;"
+    - name: DB_ENC_KEY
+      valueFrom:
+        secretKeyRef:
+          name: supabase-realtime-extra
+          key: dbEncKey
+    - name: DNS_NODES
+      value: "supabase-realtime"
+  args:
+    - -ec
+    - |
+      realtime eval Realtime.Release.migrate && realtime eval 'Realtime.Release.seeds(Realtime.Repo)' && realtime start
 
 rest:
   enabled: ###ZARF_VAR_ENABLE_REST###
@@ -107,7 +123,7 @@ volumePermissions:
   resourcesPreset: "none"
 
 psqlImage:
-  tag: 15.1.1-debian-12-r69
+  tag: 15.6.1-debian-12-r2
 
 kong:
   enabled: ###ZARF_VAR_ENABLE_KONG###
@@ -172,9 +188,11 @@ kong:
 postgresql:
   enabled: ###ZARF_VAR_ENABLE_POSTGRES###
   image:
-    tag: 15.1.1-debian-12-r69
+    tag: 15.6.1-debian-12-r2
     debug: true
   primary:
+    extendedConfiguration: |
+      wal_level = logical
     resourcesPreset: "none"
     podLabels:
       sidecar.istio.io/inject: "false"
