--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dev = [
     "pytest",
     "huggingface_hub[cli,hf_transfer]",
     "fastapi",
-    "supabase"
+    "supabase == 2.6.0"
 ]
 
 dev-whisper = ["ctranslate2 == 4.1.0", "transformers[torch] == 4.39.3"]
