--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -121,6 +121,7 @@ jobs:
             mkdir -p playwright/auth
             touch playwright/auth.user.json
             SERVICE_ROLE_KEY=$(uds zarf tools kubectl get secret -n leapfrogai supabase-bootstrap-jwt -o jsonpath={.data.service-key} | base64 -d) TEST_ENV=CI USERNAME=doug PASSWORD=$FAKE_E2E_USER_PASSWORD PUBLIC_SUPABASE_ANON_KEY=$ANON_KEY npm --prefix src/leapfrogai_ui run test:integration:ci
+            echo "Service key is: ${SERVICE_ROLE_KEY}"
 
         # Upload the Playwright report as an artifact
         - name: Archive Playwright Report
