--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -35,7 +35,7 @@ variables:
     sensitive: false
   - name: SYSTEM_PROMPT
     description: The default system prompt to use for the LLM
-    default: 'You may be provided with a list of files and their content in the following structure: [{"filename": "test.pdf","text": "some fake text"}]. Using the content of these files as context, you should refer to specific files by their filename when relevant and use the text content to provide detailed, accurate, and relevant information or answers. If the user asks questions that can be answered based on the content of the provided files, use the appropriate file''s text in your response. If the user requests clarification, further details, or specific information about a file, respond using the most relevant file or files. If necessary, combine information from multiple files to form a comprehensive response.'
+    default: 'You are a helpful AI assistant created by Defense Unicorns.'
     prompt: true
     sensitive: false
   - name: TEMPERATURE
