--- a/packages/evaluations/pyproject.toml
+++ b/packages/evaluations/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "python-dotenv == 1.0.1",
     "seaborn == 0.13.2",
     "datasets == 2.21.0",
-    "huggingface-hub == 0.24.6"
+    "huggingface-hub == 0.24.6",
+    "anthropic == 0.34.1",
+    "instructor == 1.4.0"
 ]
 requires-python = "~=3.11"
 readme = "README.md"
