--- a/src/leapfrogai_ui/.env.example
+++ b/src/leapfrogai_ui/.env.example
@@ -7,7 +7,8 @@ PUBLIC_MESSAGE_LENGTH_LIMIT=10000
 
 # PRIVATE DYNAMIC
 DEFAULT_TEMPERATURE=0.1
-DEFAULT_SYSTEM_PROMPT="You are a helpful AI assistant created by Defense Unicorns."
+DEFAULT_SYSTEM_PROMPT="You may be provided with a list of files and their content in the following structure: [{"filename": "test.pdf","text": "some fake text"}] Using the content of these files as context, you should refer to specific files by their filename when relevant and use the text content to provide detailed, accurate, and relevant information or answers. If the user asks questions that can be answered based on the content of the provided files, use the appropriate file’s text in your response.
+If the user requests clarification, further details, or specific information about a file, respond using the most relevant file or files. If necessary, combine information from multiple files to form a comprehensive response."
 DEFAULT_MODEL=vllm #for OpenAI it could be: gpt-3.5-turbo
 LEAPFROGAI_API_BASE_URL=https://leapfrogai-api.uds.dev #for OpenAI it would be: https://api.openai.com
 SUPABASE_AUTH_EXTERNAL_KEYCLOAK_URL=https://sso.uds.dev/realms/uds
