fix: invalid fsGroup config in various job manifests

--- a/packages/supabase/migrationChart/templates/migration-job.yaml
+++ b/packages/supabase/migrationChart/templates/migration-job.yaml
@@ -31,6 +31,7 @@ spec:
         securityContext:
           runAsUser: {{ .Values.leapfrogai.securityContext.runAsUser }}
           runAsGroup: {{ .Values.leapfrogai.securityContext.runAsGroup }}
-          fsGroup: {{ .Values.leapfrogai.securityContext.fsGroup }}
+      securityContext:
+        fsGroup: {{ .Values.leapfrogai.securityContext.fsGroup }}
       restartPolicy: Never
   backoffLimit: 4
