--- a/packages/ui/chart/templates/ui/migration-job.yaml
+++ b/packages/ui/chart/templates/ui/migration-job.yaml
@@ -31,6 +31,7 @@ spec:
         securityContext:
           runAsUser: {{ .Values.image.securityContext.runAsUser }}
           runAsGroup: {{ .Values.image.securityContext.runAsGroup }}
-          fsGroup: {{ .Values.image.securityContext.fsGroup }}
+      securityContext:
+        fsGroup: {{ .Values.image.securityContext.fsGroup }}
       restartPolicy: Never
   backoffLimit: 4
