--- a/.github/workflows/e2e-registry1-weekly.yaml
+++ b/.github/workflows/e2e-registry1-weekly.yaml
@@ -43,6 +43,7 @@ jobs:
           registry1Password: ${{ secrets.IRON_BANK_ROBOT_PASSWORD }}
           ghToken: ${{ secrets.GITHUB_TOKEN }}
 
+      # Set flavored package within UDS bundle definition
       - name: Set Bundle Flavor Fields
         run: |
           uds zarf tools yq -i '.packages[1] |= del(.repository)' uds-bundles/latest/cpu/uds-bundle.yaml
@@ -61,12 +62,14 @@ jobs:
             uds deploy uds-bundle-leapfrogai-amd64-registry1.tar.zst --confirm --no-progress && \
             rm -rf uds-bundle-leapfrogai-amd64-registry1.tar.zst
 
+      # API Key Prep
       - name: Set environment variable
         shell: bash
         id: set-env-var
         run: |
           echo "ANON_KEY=$(uds zarf tools kubectl get secret supabase-bootstrap-jwt -n leapfrogai -o jsonpath='{.data.anon-key}' | base64 -d)" >> "$GITHUB_ENV"
 
+      # Backends
       - name: Test llama-cpp-python
         run: |
           python -m pytest ./tests/e2e/test_llama.py -v
@@ -79,15 +82,41 @@ jobs:
         run: |
           python -m pytest ./tests/e2e/test_whisper.py -v
 
+      # Setup for application layer testing
+      - name: Generate Fake Playwright User Password
+        id: generate-password
+        run: |
+          PASSWORD=$(cat <(openssl rand -base64 32 | tr -dc 'a-zA-Z0-9!@#$%^&*()_+-=[]{}|;:,.<>?' | head -c 20) <(echo '!@1Aa') | fold -w1 | shuf | tr -d '\n')
+          echo "::add-mask::$PASSWORD"
+          echo "FAKE_E2E_USER_PASSWORD=$PASSWORD" >> $GITHUB_ENV
+
+      - name: Create Test User
+        run: |
+          chmod +x ./.github/scripts/createUser.sh
+          ./.github/scripts/createUser.sh
+
+      # Supabase
+      - name: Test Supabase
+        run: |
+          python -m pytest ./tests/e2e/test_supabase.py -v
+
+      # API
+      - name: Test API
+        run: |
+          python -m pytest ./tests/e2e/test_api.py -v
+
+      # UI
       - name: Install UI/Playwright Dependencies
         run: |
           npm --prefix src/leapfrogai_ui ci
           npx --prefix src/leapfrogai_ui playwright install
 
-      - name: Test UI
+      - name: UI/API/Supabase E2E Playwright Tests
         run: |
           cp src/leapfrogai_ui/.env.example src/leapfrogai_ui/.env
-          LEAPFROGAI_API_BASE_URL="http://leapfrogai-api.leapfrogai.svc.cluster.local:8080" TEST_ENV=CI PUBLIC_DISABLE_KEYCLOAK=true PUBLIC_SUPABASE_ANON_KEY=$ANON_KEY npm --prefix src/leapfrogai_ui run test:integration:ci
+          mkdir -p playwright/auth
+          touch playwright/auth.user.json
+          LEAPFROGAI_API_BASE_URL="http://leapfrogai-api.leapfrogai.svc.cluster.local:8080" SERVICE_ROLE_KEY=$ANON_KEY TEST_ENV=CI USERNAME=doug PASSWORD=$FAKE_E2E_USER_PASSWORD PUBLIC_SUPABASE_ANON_KEY=$ANON_KEY npm --prefix src/leapfrogai_ui run test:integration:ci
 
       - name: Archive Playwright Report
         uses: actions/upload-artifact@v4
