--- a/packages/evaluations/pyproject.toml
+++ b/packages/evaluations/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "datasets == 2.21.0",
     "huggingface-hub == 0.24.6",
     "anthropic == 0.34.1",
-    "instructor == 1.4.0"
+    "instructor == 1.4.0",
+    "pyPDF2 == 3.0.1"
 ]
 requires-python = "~=3.11"
 readme = "README.md"
