text-embeddings fixes

--- a/packages/text-embeddings/chart/Chart.yaml
+++ b/packages/text-embeddings/chart/Chart.yaml
@@ -23,4 +23,6 @@ version: 0.11.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.4.2"
+# x-release-please-start-version
+appVersion: 0.11.0
+# x-release-please-end
