--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,7 +56,7 @@ repos:
     rev: v0.12.1
     hooks:
       - id: markdownlint-cli2
-        name: Markdown Linti
+        name: Markdown Lint
 
   - repo: https://github.com/hadolint/hadolint
     rev: v2.12.0
