--- a/packages/text-embeddings/chart/templates/pvc.yaml
+++ b/packages/text-embeddings/chart/templates/pvc.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-    name: lfai-text-embeddings-pv-claim
-    namespace: leapfrogai
+    name: lfai-{{ .Values.nameOverride }}-pv-claim
+    namespace: {{ .Release.Namespace }}
 spec:
   {{- if .Values.persistence.storageClass }}
   storageClassName: {{ .Values.persistence.storageClass  }}
