--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -62,6 +62,8 @@ variables:
 components:
   - name: leapfrogai-ui
     required: true
+    only:
+      flavor: upstream
     charts:
       - name: leapfrogai-ui
         namespace: leapfrogai
