--- a/bundles/latest/gpu/uds-bundle.yaml
+++ b/bundles/latest/gpu/uds-bundle.yaml
@@ -4,49 +4,35 @@ kind: UDSBundle
 metadata:
   name: leapfrogai
   description: A UDS bundle for deploying LeapfrogAI
-  # x-release-please-start-version
-  version: 0.11.0
-  # x-release-please-end
+  version: 0.12.0-upstream
 
 packages:
   # Supabase backend for the UI and API to interface with Postgresql
   - name: supabase
     repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/supabase
-    # x-release-please-start-version
-    ref: 0.11.0
-    # x-release-please-end
+    ref: 0.12.0-upstream
 
   # OpenAI-like API
   - name: leapfrogai-api
     repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/leapfrogai-api
-    # x-release-please-start-version
-    ref: 0.11.0
-    # x-release-please-end
+    ref: 0.12.0-upstream
 
   # Model for generic chat and summarization
   - name: vllm
     repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/vllm
-    # x-release-please-start-version
-    ref: 0.11.0
-    # x-release-please-end
+    ref: 0.12.0-upstream
 
   # Model for providing vector embeddings for text
   - name: text-embeddings
     repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/text-embeddings
-    # x-release-please-start-version
-    ref: 0.11.0
-    # x-release-please-end
+    ref: 0.12.0-upstream
 
   # Model for converting audio to text
   - name: whisper
     repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/whisper
-    # x-release-please-start-version
-    ref: 0.11.0
-    # x-release-please-end
+    ref: 0.12.0-upstream
 
-  # UI - new UI TODO - point to ghcr image after Sprint 0.7.0
+  # UI
   - name: leapfrogai-ui
     repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/leapfrogai-ui
-    # x-release-please-start-version
-    ref: 0.11.0
-    # x-release-please-end
+    ref: 0.12.0-upstream
