--- a/packages/llama-cpp-python/chart/templates/pvc.yaml
+++ b/packages/llama-cpp-python/chart/templates/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-    name: lfai-llama-pv-claim
+    name: lfai-{{ .Values.nameOverride }}-pv-claim
     namespace: leapfrogai
 spec:
   {{- if .Values.persistence.storageClass }}
