whisper and other fixes

--- a/packages/llama-cpp-python/chart/templates/pvc.yaml
+++ b/packages/llama-cpp-python/chart/templates/pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
     name: lfai-{{ .Values.nameOverride }}-pv-claim
-    namespace: leapfrogai
+    namespace: {{ .Release.Namespace }}
 spec:
   {{- if .Values.persistence.storageClass }}
   storageClassName: {{ .Values.persistence.storageClass  }}
