--- a/packages/whisper/chart/values.yaml
+++ b/packages/whisper/chart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: "ghcr.io/defenseunicorns/leapfrogai/whisper"
+  repository: ghcr.io/defenseunicorns/leapfrogai/whisper
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   # x-release-please-start-version
@@ -19,11 +19,15 @@ podAnnotations: {}
 
 podSecurityContext:
   runAsNonRoot: true
+  fsGroup: 65532
 
 securityContext:
   runAsUser: 65532
   runAsGroup: 65532
-  fsGroup: 65532
+  runAsNonRoot: true
+  capabilities:
+    drop:
+    - ALL
 
 service:
   type: ClusterIP
@@ -58,3 +62,6 @@ persistence:
   size: 15Gi
   accessModes: ReadWriteOnce
   storageClass: "local-path"
+
+gpu:
+  runtimeClassName: "###ZARF_VAR_GPU_CLASS_NAME###"
