--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -97,7 +97,12 @@ repos:
       - id: download-schema
         name: "Download Zarf Schema"
         entry: |
-          bash -c 'curl -o zarf-v0.14.0.schema.json https://raw.githubusercontent.com/defenseunicorns/uds-cli/v0.14.0/zarf.schema.json'
+          bash -c 'FILE="zarf-v0.14.0.schema.json"
+          if [ -f "$(git rev-parse --show-toplevel)/$FILE" ]; then
+            echo "$FILE already exists in the root of the git project, skipping download."
+          else
+            curl -o "$FILE" https://raw.githubusercontent.com/defenseunicorns/uds-cli/v0.14.0/zarf.schema.json
+          fi'
         language: system
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
@@ -115,7 +120,12 @@ repos:
       - id: download-schema
         name: "Download UDS Bundle Schema"
         entry: |
-          bash -c 'curl -o uds-v0.14.0.schema.json https://raw.githubusercontent.com/defenseunicorns/uds-cli/v0.14.0/uds.schema.json'
+          bash -c 'FILE="uds-v0.14.0.schema.json"
+          if [ -f "$(git rev-parse --show-toplevel)/$FILE" ]; then
+            echo "$FILE already exists in the root of the git project, skipping download."
+          else
+            curl -o "$FILE" https://raw.githubusercontent.com/defenseunicorns/uds-cli/v0.14.0/uds.schema.json
+          fi'
         language: system
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
