--- a/packages/repeater/chart/templates/deployment.yaml
+++ b/packages/repeater/chart/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "chart.selectorLabels" . | nindent 8 }}
+        app: lfai-{{ .Values.nameOverride }}
     spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
