--- a/packages/repeater/values/upstream-values.yaml
+++ b/packages/repeater/values/upstream-values.yaml
@@ -1,8 +1,6 @@
 image:
-  tag: "###ZARF_CONST_IMAGE_VERSION###"
-
-gpu:
-  runtimeClassName: nvidia
+  repository: ghcr.io/defenseunicorns/leapfrogai/repeater
+  tag: ###ZARF_CONST_IMAGE_VERSION###
 
 persistence:
   size: ###ZARF_VAR_PVC_SIZE###
