--- a/packages/repeater/zarf.yaml
+++ b/packages/repeater/zarf.yaml
@@ -3,7 +3,7 @@ metadata:
   name: repeater
   version: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
   description: >
-    repeater
+    repeater model
 
 constants:
   - name: IMAGE_VERSION
@@ -21,6 +21,6 @@ components:
         version: 0.11.0
         # x-release-please-end
         valuesFiles:
-          - "repeater-values.yaml"
+          - "values/upstream-values.yaml"
     images:
       - ghcr.io/defenseunicorns/leapfrogai/repeater:###ZARF_PKG_TMPL_IMAGE_VERSION###
