--- a/packages/text-embeddings/chart/values.yaml
+++ b/packages/text-embeddings/chart/values.yaml
@@ -64,4 +64,25 @@ persistence:
   storageClass: "local-path"
 
 gpu:
-  runtimeClassName: "###ZARF_VAR_GPU_CLASS_NAME###"
+  runtimeClassName: "###ZARF_VAR_GPU_RUNTIME_NAME###"
+
+modelInjectionContainer:
+  securityContext:
+    runAsUser: 65532
+    runAsGroup: 65532
+    runAsNonRoot: true
+    capabilities:
+      drop:
+      - ALL
+
+  resources:
+    limits:
+      memory: "128Mi"
+      cpu: "500m"
+    requests:
+      memory: "64Mi"
+      cpu: "200m"
+
+  volumeMounts:
+    - name: leapfrogai-pv-storage
+      mountPath: /data
