--- a/packages/vllm/chart/values.yaml
+++ b/packages/vllm/chart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: "ghcr.io/defenseunicorns/leapfrogai/vllm"
+  repository: ghcr.io/defenseunicorns/leapfrogai/vllm
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   # x-release-please-start-version
@@ -19,11 +19,15 @@ podAnnotations: {}
 
 podSecurityContext:
   runAsNonRoot: true
+  fsGroup: 65532
 
 securityContext:
   runAsUser: 65532
   runAsGroup: 65532
-  fsGroup: 65532
+  runAsNonRoot: true
+  capabilities:
+    drop:
+      - ALL
 
 service:
   type: ClusterIP
@@ -37,11 +41,10 @@ resources:
   limits:
     cpu: 0
     memory: 0
-    nvidia.com/gpu: 1
+    nvidia.com/gpu: 0
   requests:
     cpu: 0
     memory: 0
-    nvidia.com/gpu: 1
 
 autoscaling:
   enabled: false
@@ -59,3 +62,27 @@ persistence:
   size: 15Gi
   accessModes: ReadWriteOnce
   storageClass: "local-path"
+
+gpu:
+  runtimeClassName: "###ZARF_VAR_GPU_RUNTIME_NAME###"
+
+modelInjectionContainer:
+  securityContext:
+    runAsUser: 65532
+    runAsGroup: 65532
+    runAsNonRoot: true
+    capabilities:
+      drop:
+        - ALL
+
+  resources:
+    limits:
+      memory: "128Mi"
+      cpu: "500m"
+    requests:
+      memory: "64Mi"
+      cpu: "200m"
+
+  volumeMounts:
+    - name: leapfrogai-pv-storage
+      mountPath: /data
